# rust-sqlite-api

./: .env  Cargo.toml
migrations/: 20240301052814_post.sql  20240301063125_init.sql
seed/: seed.rs
src/: handler.rs  main.rs
